# splork

./: .gitignore  Dockerfile  Dockerfile.ci  MANUAL_SETUP.md  README.md
.github/workflows/: build.yml  publish.yml
.scripts/: dockerbuild.sh  dockerbuildci.sh
diffgen/: diffgen.py  requirements.txt
imageconverter/: LICENSE  binpatcher.py  instructionconverter.py  offset_file_gen.py  placeholder_drawing.h  requirements.txt
images/sampleimages/: oppenheimer.xcf
rp2040src/: CMakeLists.txt  LICENSE  main.c  usb_descriptors.c
webpatcher/: index.html  splorkwebpatcher.js
